<resources>
    <string name="app_name">Day02</string>
    <string name="perhitungan_balok_sederhana">Perhitungan Balok Sederhana</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="circumference">Circumference</string>
    <string name="surface_area">Surface Area</string>
    <string name="volume">Volume</string>
</resources>